# Chatbot-using-LLM

./: README.md  main.py  pyproject.toml  test.py
data/: khmt.csv
gemini_structured/: __init__.py  llm.py
gemini_structured/api/: chat.py
gemini_structured/data_engine/: loader.py
gemini_structured/llm/: llm.py  prompt.py
gemini_structured/query/: query_executor.py
